[package]
name = "word_with"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
crossterm = "0.29.0"
rand = "0.10"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal_size = "0.4.4"
tokio = { version = "1", features = ["full"]}
